Update the prompt.

--- a/header.html
+++ b/header.html
@@ -38,6 +38,7 @@
       border: 1px solid #d0d7de;
       padding: 1rem;
       border-radius: 6px;
+      min-width: 0;
     }
 
     /* Simple responsive tweak: stack columns under 700 px */
